--- a/curator3-Danil_Baldikov.conf
+++ b/curator3-Danil_Baldikov.conf
@@ -1,6 +1,6 @@
-[program:curator3-Danil_Baldikov]
-command=python3 /home/curator3/curator3-Danil_Baldikov/main.py
+[program:curator3-Varvara]
+command=python3 /home/curator3/curator3-Varvara/main.py
 autostart=true
 autorestart=true
-stderr_logfile=/home/curator3/curator3-Danil_Baldikov/test.err.log
-stdout_logfile=/home/curator3/curator3-Danil_Baldikov/test.out.log
+stderr_logfile=/home/curator3/curator3-Varvara/test.err.log
+stdout_logfile=/home/curator3/curator3-Varvara/test.out.log
