--- a/curator3-Alina.conf
+++ b/curator3-Alina.conf
@@ -1,4 +1,4 @@
-[program:curator3-Alina
+[program:curator3-Alina]
 command=python3 /home/curator3/curator3-Alina/main.py
 autostart=true
 autorestart=true
